Fix text and card overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -134,6 +134,7 @@ body {
     .country-card {
       margin: 1.25em;
       background-color: #fff;
+      overflow: hidden;
       border-radius: 5px;
       box-shadow: rgba(34, 36, 38, 0.15) 0px 1px 2px 0px;
 
